# siguldry

./: .gitignore  .gitleaks.toml  CONTRIBUTING.md  Cargo.toml  README.md  compose.yml  deny.toml
.cargo/: config.toml
.github/workflows/: actions-audit.yml  cargo-audit.yml  ci.yaml
.sqlx/: query-e0a35d9194218e1f70cac70d8f753a45022e52afab22afa459315eeb878a8b73.json
devel/: 0001-Enable-debug-logging-to-console.patch  Containerfile.sigul  hsm.sh  local_hsm_test.sh  setup_hsm.sh  sigul-bridge.conf  sigul-client.conf  sigul-server.conf  sigul_auth_keys.sh  sigul_key_setup.sh  siguldry_auth_keys.sh  startup_wrapper.sh
devel/creds/: secure-boot-ca-cert.pem  secure-boot-code-signing-cert.pem  sigul.ca_certificate.pem  sigul.client.certificate.pem  sigul.client.private_key.pem  sigul.signing-key-passphrase
devel/github/: bridge.conf  config.toml  server.conf
devel/local/: bridge.conf  client.conf  config.toml  server.conf
sample-uefi/: Cargo.toml  README.md
sigul-pesign-bridge/: CHANGELOG.md  Cargo.toml  README.md  config.toml.example  sigul-pesign-bridge.service
sigul-pesign-bridge/docs/: sigul-pesign-bridge.1
sigul-pesign-bridge/src/: cli.rs  config.rs  lib.rs  main.rs  pesign.rs  service.rs
sigul-pesign-bridge/tests/: config.rs  pesign_client.rs  service_checks_permissions.rs
siguldry/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
siguldry/migrations/: 0001_Initial_database_migration.sql
siguldry/src/: bridge.rs  client.rs  connection.rs  error.rs  lib.rs  nestls.rs
siguldry/src/serdes/: de.rs  error.rs  mod.rs  ser.rs  serde.py
siguldry/src/v1/: client.rs  connection.rs  error.rs  nestls.rs
siguldry/src/v2/: bridge.rs  client.rs  connection.rs  error.rs  mod.rs  nestls.rs  protocol.rs  server.rs  tls.rs
siguldry/src/v2/client/: api.rs  mod.rs  service.rs
siguldry/src/v2/server/: db.rs  handlers.rs  mod.rs  service.rs
siguldry/tests/: bridge_v2.rs  client.rs
src/: cli.rs  main.rs  service.rs
tests/: pesign_client.rs  service_checks_permissions.rs
xtask/: Cargo.toml
xtask/src/: main.rs
