[package]
name = "sigul-pesign-bridge"
version = "0.1.0"
rust-version = "1.79"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["pesign", "sigul", "fedora"]
categories = ["command-line-utilities"]
repository = "https://github.com/jeremycline/siguldry"


[dependencies.anyhow]
version = "1.0.47"

[dependencies.bytes]
version = "1.3.0"

[dependencies.clap]
version = "4.0"
default-features = false
features = ["std", "derive", "env", "help", "usage", "error-context"]

# Needed for sending/receiving ancillary data
#
# The feature is currently in Rust nightly so this could be dropped once
# MSRV goes above whatever version that feature gets stabilized.
[dependencies.nix]
version = "0.29"
features = ["socket", "uio", "fs"]

# Used to temporarily stash input files for sigul within the runtime directory.
[dependencies.tempfile]
version = "3"

[dependencies.tokio]
version = "1.27"
features = ["io-util", "macros", "net", "rt", "signal", "time", "process"]

# Used for the CancellationToken
[dependencies.tokio-util]
version = "0.7.1"
features = ["rt"]

[dependencies.tracing]
version = "0.1.36"

[dependencies.tracing-subscriber]
version = "0.3.17"
default-features = false
features = ["std", "registry", "fmt", "env-filter"]

# Used for deserializing the configuration file
[dependencies.toml]
version = "0.8"

[dependencies.serde]
version = "1.0.145"
features = ["derive"]

# Used to generate unique IDs for each signing request; used in logs.
[dependencies.uuid]
version = "1.6"
features = ["v7"]

[dev-dependencies]
tracing-test = "0.2"
assert_cmd = "2"
tempfile = "3"
nix = { version = "0.29", features = ["process", "signal"] }
proptest = "1.6"